feat : navigation and refactor code

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,8 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  @apply scroll-smooth;
+
 }
 
 a {
